[package]
name = "lvgl-test"
version = "0.0.1"
edition = "2021"
publish = false

[features]
default = ["alloc"]
alloc = ["cstr_core/alloc"]

[dependencies]
lvgl = { git = "https://github.com/ronan22/lv_binding_rust", branch = "master" }
lvgl-sys = { git = "https://github.com/ronan22/lv_binding_rust", branch = "master" }
cstr_core = { version = "0.2", default-features = false, features = ["alloc"] }

[[bin]]
name = "lvgl-arc"
path = "src/arc.rs"
